# gui-termius

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  eslint.config.js  gui-termius Prototype Connexions (standalone).html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
app/: Cargo.toml
app/src/: app.rs  host_form.rs  main.rs  ssh_bridge.rs
core/: Cargo.toml
core/examples/: sql_wsl_smoke.rs
core/src/: adaptive.rs  command_history.rs  crypto.rs  docker.rs  docker_pane.rs  export.rs  facts.rs  fleet.rs  fleet_history.rs  k8s.rs  k8s_pane.rs  keygen.rs  known_hosts.rs  lib.rs  local_fs.rs  local_shell.rs  master_vault.rs  model.rs  port_forward.rs  rdp.rs  remote_shell_pane.rs  secure_file.rs  sftp.rs  sql.rs  ssh.rs  ssh_config.rs  store.rs  sync_ext.rs  transfer.rs  vault.rs
core/tests/: fleet_integration.rs  sftp_and_forward_integration.rs  sql_sqlite_integration.rs  ssh_integration.rs
core/tests/common/: mod.rs
docs/: dev-history.md
docs/blog/: rdp-sidecar-architecture.md
rdp-ipc/: Cargo.toml
rdp-ipc/src/: lib.rs
rdp-sidecar/: Cargo.toml
rdp-sidecar/src/: clipboard.rs  input.rs  main.rs
scripts/: bump-version.mjs  e2e-run.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs  util.rs
src-tauri/src/commands/: adaptive.rs  command_history.rs  dialog.rs  docker.rs  export.rs  facts.rs  fleet.rs  forward.rs  hosts.rs  k8s.rs  keys.rs  known_hosts.rs  mod.rs  rdp.rs  rdp_view.rs  sftp.rs  sql.rs  terminal.rs  vault.rs
src/components/: CommandPalette.tsx  ConnectionPickerModal.tsx  FleetTab.tsx  GroupForm.tsx  GroupTreePicker.tsx  HostForm.tsx  HostsPanel.tsx  IconPicker.tsx  KeychainPanel.tsx  KnownHostsPanel.tsx  LocalTerminalTab.tsx  NotificationBell.tsx  QuickEditModal.tsx  RdpTab.tsx  SettingsPanel.tsx  SftpPanel.tsx  Sidebar.tsx  SnippetsPanel.tsx  SplitPane.tsx  SqlConnectionForm.tsx  SqlConnectionsPanel.tsx  SqlTab.tsx  SqliteRemoteFilePicker.tsx  TabBar.tsx  TerminalSearchBar.tsx  TerminalTab.tsx  TitleBar.tsx  TransferTab.tsx  TunnelsPanel.tsx  VaultSettings.tsx  VaultUnlockModal.tsx  icons.tsx  ui-icons.tsx
src/hooks/: useBroadcast.ts  useContainerPicker.tsx  usePolledHostStat.ts  useTabs.ts
src/lib/: api.ts  hostKinds.ts  notifications.ts  operations.ts  preferences.ts  runOnTerminalHandle.ts  shortcuts.ts  tabPersistence.ts  types.ts
term/: Cargo.toml
term/src/: actions.rs  backend.rs  bindings.rs  font.rs  lib.rs  settings.rs  terminal.rs  theme.rs  view.rs
