[workspace]
resolver = "3"
# `app` and `term` (the retired iced UI) are intentionally left out of the
# workspace members — kept on disk for reference since nothing is committed
# to git yet, but no longer built. The UI now lives in `src-tauri` + the
# React frontend at the repo root.
members = ["core", "src-tauri", "rdp-ipc"]
# `rdp-sidecar` is deliberately NOT a member here — it's its own separate
# Cargo workspace (see rdp-sidecar/Cargo.toml) so its dependency resolution
# never has to unify with `russh`'s. `rdp-ipc` has no risky dependencies of
# its own (just tokio + serde_json), so it's safe to share between both
# workspaces as a plain path dependency. See CLAUDE.md's "Pourquoi un
# processus RDP séparé" section.

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "PolyForm-Noncommercial-1.0.0"

[workspace.dependencies]
termius-core = { path = "core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "process"] }

russh = "0.61"
russh-sftp = "2.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

keyring = "4"
directories = "6"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.10"
zeroize = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
