[package]
name = "gui-termius"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gui-termius"
path = "src/main.rs"

[dependencies]
termius-core.workspace = true
termius-term.workspace = true
iced.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
