[package]
name = "termius-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
russh.workspace = true
russh-sftp.workspace = true
serde.workspace = true
serde_json.workspace = true
keyring.workspace = true
directories.workspace = true
anyhow.workspace = true
uuid.workspace = true
zeroize.workspace = true
tracing.workspace = true
async-trait = "0.1"
# Key generation: an OS randomness source compatible with the `rand_core`
# version `ssh-key` (a transitive dependency via `russh`) actually resolves
# to — `russh::keys::ssh_key` doesn't re-export one itself.
getrandom = { version = "0.4.3", features = ["sys_rng"] }
bollard = "0.21"
futures-util = "0.3"
# `docker_pane`: builds/reads the single-entry tar archives the Docker Engine
# API's container-archive endpoints (`GET/PUT /containers/{id}/archive`) speak.
tar = "0.4"
# `docker::connect_via_ssh`: speaks the Docker Engine API over a `russh` exec
# channel (`docker system dial-stdio`) instead of a socket/TCP connection —
# same major version bollard itself resolves (`hyper = "1.3"`, `hyper-util =
# "0.1.5"`), so Cargo unifies rather than pulling in a second copy. Goes
# through `hyper_util::client::legacy::Client` (not the lower-level
# `hyper::client::conn` API — see `docker::connect_via_ssh`'s doc comment for
# why that matters), same as bollard's own `http`/`pipe`/`ssh` transports
# internally, hence the matching feature set.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["http1", "client-legacy", "tokio"] }
tower-service = "0.3"
# Master-password vault (optional, opt-in): Argon2id KDF + XChaCha20-Poly1305 AEAD.
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.22"
# `adaptive`: calls the Anthropic Messages API to generate a per-OS command
# from a natural-language intent. rustls (not native-tls) to avoid an
# OpenSSL dependency; default-features off + explicit `json` since we only
# ever do one POST with a JSON body/response, nothing else reqwest offers.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# `k8s`/`k8s_pane`: talks to the Kubernetes API server for pod exec sessions
# (`ws` feature — pod attach/exec runs over a WebSocket, not plain HTTP).
# Checked against the RDP/ecdsa saga before adding (see CLAUDE.md's "Pourquoi
# un processus RDP séparé") — resolves cleanly alongside russh/bollard/reqwest
# with no exact-pin conflict, unlike ironrdp-connector's `picky` dependency;
# no separate workspace needed here.
kube = { version = "0.99", default-features = false, features = ["client", "rustls-tls", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
# `sql`: MySQL/PostgreSQL client — checked against the RDP/ecdsa saga before
# adding (see CLAUDE.md's "Pourquoi un processus RDP séparé"), resolves
# cleanly alongside russh/bollard/reqwest/kube, no separate workspace needed.
# Native `postgres`/`mysql` pools, not the generic `any` driver: `any` only
# decodes a closed 9-variant type set (bool/int widths/float widths/text/
# blob/null) — real tables routinely have NUMERIC/TIMESTAMP(TZ)/UUID/JSON(B)
# columns, none of which fit that set, so `any` hard-fails the entire query
# the moment one appears (verified against a real Postgres server, not just
# reasoned about). `rust_decimal`/`json` add decode support for NUMERIC (as
# an exact string — `f64` would silently round monetary amounts) and JSON(B).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "chrono", "uuid", "json", "rust_decimal"] }
# Forces `sqlx-sqlite`'s own `libsqlite3-sys` dependency to statically
# compile SQLite from vendored C source (Cargo feature unification applies
# `bundled` workspace-wide the moment *any* crate enables it) rather than
# linking a system libsqlite3 via pkg-config — the latter isn't present on a
# fresh Windows build machine (see CLAUDE.md's native-Windows build section)
# and would otherwise fail `cargo build` there with no local workaround.
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
# Already resolved transitively (reqwest/sqlx) — declared directly since
# `sql::build_url` uses its setters (percent-encoding credentials safely,
# see that function's doc comment) rather than just consuming it.
url = "2"

[dev-dependencies]
tempfile = "3"
# examples/docker_ssh_debug.rs only.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "docker_ssh_debug"

[[example]]
name = "sql_wsl_smoke"
