# Member of rdp-sidecar's own workspace (see rdp-sidecar/Cargo.toml), NOT
# the repo's root workspace — deliberately dependency-light (tokio +
# serde_json only), shared by `src-tauri` (reader, via a plain path
# dependency from the *root* workspace) and `rdp-sidecar` (writer). Must
# never gain a path to `russh`.
[package]
name = "rdp-ipc"
version = "1.5.0"
edition = "2024"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
