[package]
name = "guiterm"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "guiterm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
termius-core.workspace = true
tokio.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
base64 = "0.22"
portable-pty = "0.8"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
rdp-ipc = { path = "../rdp-ipc" }
tracing = "0.1"
tracing-subscriber = "0.3"
# Pinned: cookie 0.18.1 (pulled in by tauri/wry) calls a `time` API in a way
# that newer 0.3.x releases (>=0.3.48) made a breaking change to. 0.3.47 is
# the oldest version `plist` (also pulled in by tauri) still accepts.
time = "=0.3.47"
