[package]
name = "termius-term"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { workspace = true, features = ["canvas", "lazy", "advanced"] }
iced_core = "0.14"
iced_graphics = { version = "0.14", default-features = false }
alacritty_terminal.workspace = true
tokio = { workspace = true, features = ["rt"] }
anyhow.workspace = true
open = "5"
